--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-load-plugins": "~0.5.3",
     "gulp-minify-css": "~0.3.6",
     "gulp-notify": "~1.4.0",
+    "gulp-pixrem": "^0.1.1",
     "gulp-rename": "~1.2.0",
     "gulp-ruby-sass": "~0.5.0",
     "gulp-strip-debug": "~0.3.0",
