--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "gulp": "~3.8.5"
   },
   "devDependencies": {
+    "brfs": "^1.2.0",
     "browser-sync": "~1.1.2",
     "gulp": "~3.8.5",
     "gulp-autoprefixer": "0.0.8",
+    "gulp-browserify": "^0.5.0",
     "gulp-cache": "~0.2.0",
     "gulp-clean": "~0.3.1",
     "gulp-concat": "~2.2.0",
@@ -20,7 +22,7 @@
     "gulp-notify": "~1.4.0",
     "gulp-pixrem": "^0.1.1",
     "gulp-rename": "~1.2.0",
-    "gulp-ruby-sass": "~0.5.0",
+    "gulp-sass": "^1.1.0",
     "gulp-strip-debug": "~0.3.0",
     "gulp-uglify": "~0.3.1",
     "jshint-stylish": "~0.2.0"
