--- a/package.json
+++ b/package.json
@@ -9,22 +9,34 @@
   "devDependencies": {
     "brfs": "^1.2.0",
     "browser-sync": "~1.1.2",
+    "browserify": "^6.1.0",
+    "chai": "^1.9.2",
+    "glob": "^4.0.6",
     "gulp": "~3.8.5",
     "gulp-autoprefixer": "0.0.8",
-    "gulp-browserify": "^0.5.0",
+    "gulp-buffer": "0.0.2",
     "gulp-cache": "~0.2.0",
     "gulp-clean": "~0.3.1",
     "gulp-concat": "~2.2.0",
     "gulp-imagemin": "~0.6.1",
     "gulp-jshint": "~1.6.4",
+    "gulp-karma": "0.0.4",
     "gulp-load-plugins": "~0.5.3",
     "gulp-minify-css": "~0.3.6",
+    "gulp-mocha": "^1.1.1",
     "gulp-notify": "~1.4.0",
     "gulp-pixrem": "^0.1.1",
     "gulp-rename": "~1.2.0",
     "gulp-sass": "^1.1.0",
     "gulp-strip-debug": "~0.3.0",
     "gulp-uglify": "~0.3.1",
+    "karma": "^0.12.24",
+    "karma-mocha": "^0.1.9",
+    "karma-notify-reporter": "^0.1.1",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "lodash-node": "^2.4.1",
+    "mocha": "^1.21.5",
+    "vinyl-source-stream": "^1.0.0",
     "jshint-stylish": "~0.2.0"
   },
   "scripts": {
